I am lost on javascript syntax

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <br>
                 <p id="wins">Wins: </p>
                 <p id="losses">Losses: </p>
-                <p id="gLeft">Guesses Left: </p>
-                <p id="gSoFar">Guesses so far: </p>
+                <p id="left">Guesses Left: </p>
+                <p id="guesses">Guesses so far: </p>
             </div>
         </div>
         <script src="assets/javascript/game.js"></script>
