taking another stab at it.  corrected the html and started reworking my .js file

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 <hr class="my-4">
                 <h3>Guess what letter I am thinking of!</h3>
                 <br>
-                <p id="wins">Wins: </p>
-                <p id="losses">Losses: </p>
-                <p id="left">Guesses Left: </p>
-                <p id="guesses">Guesses so far: </p>
+                <p>Wins: <span id="wins"></span></p>
+                <p>Losses: <span id="losses"></span></p>
+                <p>Guesses Left: <span id="left"></span></p>
+                <p>Guesses so far: <span id="guesses"></span></p>
             </div>
         </div>
         <script src="assets/javascript/game.js"></script>
