I think I actually got it!  Finallygit add -A

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>psychic game</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     </head>
 
@@ -16,8 +16,8 @@
                 <br>
                 <p>Wins: <span id="wins"></span></p>
                 <p>Losses: <span id="losses"></span></p>
-                <p>Guesses Left: <span id="left"></span></p>
-                <p>Guesses so far: <span id="guesses"></span></p>
+                <p>Guesses Left: <span id="guessesLeft"></span></p>
+                <p>Guesses so far: <span id="guessesMade" ></span></p>
             </div>
         </div>
         <script src="assets/javascript/game.js"></script>
